# wordvec

./: .gitignore  .ocamlformat  README.md  dune-project  wordvec.opam
.github/workflows/: ci.yml
lib/: dune  skipgram.ml  skipgram.mli  wordvec.ml
lib/core/: dune  matrix.ml  matrix.mli  parallel.ml  parallel.mli  similarity.ml  similarity.mli  vector.ml  vector.mli
lib/io/: dune  file_utils.ml  file_utils.mli
lib/preprocess/: dune  text_utils.ml  text_utils.mli  xml_utils.ml  xml_utils.mli
