(lang dune 3.19)

(name wordvec)

(generate_opam_files true)

(source
 (github KengoA/wordvec))

(authors "Kengo Arao <kengo@hey.com>")

(maintainers "Kengo Arao <kengo@hey.com>")

(license LICENSE)

(documentation https://github.com/KengoA/wordvec)

(package
 (name wordvec)
 (synopsis "Word embedding algorithms in OCaml")
 (description "Word embedding algorithms in OCaml")
 (depends ocaml)
 (tags ("word2vec" "ocaml"))
)
